# TaraTools2.0

./: CMakeLists.txt  LICENSE  README.md
src/: glmn.cpp
